fix(UI) page elements scroll, not the document
this fixes an issue where if the user scrolls down on the forum page and navigates back, they'd navigate to a home page that'd been scrolled far out of view. Now page elements effectively have their own scroll state.

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,8 @@ body {
 
 .page {
   position: absolute;
+  height: calc(100% - 100px);
+  overflow-y: scroll;
   left: 0;
   right: 0;
   transition: all 0.5s ease-in-out;
